# ventureforge

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
docs/: agent_guide.md  api_reference.md  architecture.md  prompt_engineering.md  state_schema.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx
scripts/: autosync.sh  export_run.py  init_db.py  run_builder.py  run_screener.py
tests/: conftest.py
tests/fixtures/: sample_opportunity.json  sample_run_state.json
tests/integration/: test_builder_pipeline.py  test_screener_pipeline.py
tests/unit/: test_api.py  test_builder_sections.py  test_cache.py  test_calibrator.py  test_checkpointer.py  test_cli.py  test_config.py  test_database.py  test_deep_dive.py  test_evaluator.py  test_exporters.py  test_llm_clients.py  test_memory.py  test_misc_coverage.py  test_pdf_docx.py  test_rate_limiter.py  test_research_modules.py  test_schemas.py  test_state.py  test_validators.py  test_web_fetcher.py
ventureforge/: __init__.py  api.py  main.py
ventureforge/agents/: base.py  consistency_checker.py  critic.py  gap_analyst.py  generator.py  meta_agent.py  researcher.py  scorer.py  synthesizer.py
ventureforge/builder/: assembler.py  builder.py
ventureforge/core/: config.py  database.py  exceptions.py  models.py  schemas.py  state.py
ventureforge/llm/: anthropic_client.py  gemini_client.py  openai_client.py  rate_limiter.py  router.py
ventureforge/memory/: embeddings.py  knowledge_base.py  lessons.py
ventureforge/orchestrator/: checkpointer.py  loop.py  router.py  runner.py
(+99 files in other folders)
