[project]
name = "ventureforge"
version = "0.1.0"
description = "Agentic AI Business Screener & Builder"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "tavily-python>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer[all]>=0.13.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "structlog>=24.4.0",
    "python-docx>=1.1.0",
    "reportlab>=4.2.0",
    "httpx>=0.28.0",
    "tenacity>=9.0.0",
    "tiktoken>=0.8.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.0",
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "greenlet>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
embeddings = [
    "sentence-transformers>=3.3.0",
    "numpy>=2.2.0",
]

[project.scripts]
ventureforge = "ventureforge.main:app"

[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["E501", "B008", "E741", "A002"]

[tool.ruff.lint.per-file-ignores]
"ventureforge/api.py" = ["E712"]
"ventureforge/main.py" = ["E712"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
